# gonka

./: .dockerignore  .gitignore  CODEOWNERS  Makefile  README.md  websocket-integration.md  websocket-testermint.md
bridge/: Dockerfile  Makefile  script.sh
common/: convert_types.go  go.mod  go.sum
decentralized-api/: Dockerfile  Makefile  go.mod  go.sum  main.go
docs/: manual-recover.md  upgrade-1-recover.md
genesis/: genesis-draft.json  genesis.json
inference-chain/: Dockerfile  Makefile  go.mod  go.sum  test_genesis_overrides.json  verify_permissions.py
local-test-net/: README.md  docker-compose-base.yml  docker-compose-local-mock-node-3.yml  docker-compose.dns.yml  docker-compose.proxy-ssl.yml  docker-compose.proxy.yml  launch_add_network_node.sh  launch_full.sh  launch_genesis_only.sh  stop-rebuild.sh  test_verification_with_snapshot.sh
mlnode/: Makefile
notebooks/: debug-active-participant.ipynb  epoch.go  epoch_script.go  epochs.py  epochs_test.py  go.mod
proxy/: Dockerfile  README.md  entrypoint.sh  nginx.conf.template  nginx.ssl.conf.template  setup-ssl.sh
proxy-ssl/: Dockerfile  Makefile  README.md  docker-entrypoint.sh  go.mod
testermint/: README.md
tracker/: .cursorrules  .gitignore  Makefile  README.md  (+2 more)
tracker/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
tracker/backend/scripts/: test_authz_grants.py
tracker/backend/src/backend/: app.py  client.py  database.py  models.py  router.py  service.py
tracker/backend/src/tests/: test_hardware_nodes.py  test_models.py  test_router.py  test_warm_keys.py
(+573 files in other folders)
